--- a/POI/ASG_Sample/Test/Assembly-CSharp.csproj
+++ b/POI/ASG_Sample/Test/Assembly-CSharp.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\NewBehaviourScript.cs" />
+    <Compile Include="Assets\NewBehaviourScript1.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
