--- a/Park-ouiin/AccSensorGame/Assembly-CSharp.csproj
+++ b/Park-ouiin/AccSensorGame/Assembly-CSharp.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Assets\Scripts\PlayerManager.cs" />
     <Compile Include="Assets\Resources\ScriptableObject\ObstacleSpawnData.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
+    <Compile Include="Assets\Scripts\ButtonManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
