--- a/Park-ouiin/AccSensorGame/Assembly-CSharp.csproj
+++ b/Park-ouiin/AccSensorGame/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Assets\Scripts\Utility.cs" />
     <Compile Include="Assets\Scripts\Share.cs" />
     <Compile Include="Assets\Scripts\ResultUI.cs" />
+    <Compile Include="Assets\Scripts\NewBehaviourScript.cs" />
     <Compile Include="Assets\Resources\ScriptableObject\ObstacleData.cs" />
     <Compile Include="Assets\Scripts\JudgeManager.cs" />
     <Compile Include="Assets\Scripts\ButtonManager.cs" />
@@ -76,7 +77,6 @@
     <Compile Include="Assets\Scripts\PlayerManager.cs" />
     <Compile Include="Assets\Resources\ScriptableObject\ObstacleSpawnData.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
-    <Compile Include="Assets\Scripts\MissionManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
