--- a/Kang-SangJun/KongKongE/Assembly-CSharp.csproj
+++ b/Kang-SangJun/KongKongE/Assembly-CSharp.csproj
@@ -56,20 +56,22 @@
     <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\ObjectFactory.cs" />
-    <Compile Include="Assets\Scripts\UIRoot.cs" />
-    <Compile Include="Assets\Scripts\PlayerCamera.cs" />
-    <Compile Include="Assets\Scripts\Data.cs" />
-    <Compile Include="Assets\Scripts\Interface.cs" />
-    <Compile Include="Assets\Scripts\Player.cs" />
-    <Compile Include="Assets\Scripts\TitleUI.cs" />
-    <Compile Include="Assets\Scripts\Launcher.cs" />
-    <Compile Include="Assets\Scripts\DataManager.cs" />
-    <Compile Include="Assets\Scripts\Scene.cs" />
-    <Compile Include="Assets\Scripts\MoveController.cs" />
-    <Compile Include="Assets\Scripts\UIManager.cs" />
-    <Compile Include="Assets\Scripts\ObjectFinder.cs" />
-    <Compile Include="Assets\Scripts\ObjectManager.cs" />
+    <Compile Include="Assets\Scripts\FGB_ObjectFactory.cs" />
+    <Compile Include="Assets\Scripts\FGB_UIRoot.cs" />
+    <Compile Include="Assets\Scripts\FGB_PrefabFactory.cs" />
+    <Compile Include="Assets\Scripts\FGB_Camera.cs" />
+    <Compile Include="Assets\Scripts\FGB_Data.cs" />
+    <Compile Include="Assets\Scripts\FGB_Interface.cs" />
+    <Compile Include="Assets\Scripts\FGB_Player.cs" />
+    <Compile Include="Assets\Scripts\FGB_TitleUI.cs" />
+    <Compile Include="Assets\Scripts\FGB_Launcher.cs" />
+    <Compile Include="Assets\Scripts\FGB_DataManager.cs" />
+    <Compile Include="Assets\Scripts\FGB_Scene.cs" />
+    <Compile Include="Assets\Scripts\FGB_MoveController.cs" />
+    <Compile Include="Assets\Scripts\FGB_UIManager.cs" />
+    <Compile Include="Assets\Scripts\FGB_Share.cs" />
+    <Compile Include="Assets\Scripts\FGB_ObjectManager.cs" />
+    <Compile Include="Assets\Scripts\FGB_InGameUI.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
